force-app/main/default/objects/Hasta__c/Hasta__c.object-meta.xml
<CustomObject>
    <label>Hasta</label>
    <nameField>
        <label>Hasta Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Hastalar</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>