force-app/main/default/objects/Hasta__c/fields/Doktor__c.field-meta.xml
<CustomField>
    <fullName>Doktor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Doktor</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Hastalar</relationshipName>
    <type>Lookup</type>
</CustomField>