force-app/main/default/objects/Hasta__c/fields/Teshis__c.field-meta.xml
<CustomField>
    <fullName>Teshis__c</fullName>
    <label>Teshis</label>
    <length>100</length>
    <type>Text</type>
</CustomField>